--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,20 @@
             </td>
             <td>
               <%= link_to 'Destroy', book_path(@book.id), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger" %>
-          </td>
+            </td>
+          <% end %>
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorite_path(@book), method: :delete do %>
+                ❤︎<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% else %>
+            <td>
+              <%=link_to book_favorite_path(@book), method: :post do %>
+                ❤<%= @book.favorites.count %>
+              <% end %>
+            </td>
           <% end %>
         </tr>
       </table>
