--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,8 +43,15 @@
               <% end %>
             </td>
           <% end %>
+          <td>
+            コメント数:<%= @book.book_comments.count %>
+          </td>
         </tr>
       </table>
+      <%= form_with model: @book_comment, url: book_book_comment_path(@book) do |f| %>
+        <%= f.text_area :comment, rows: '6', placeholder: "コメントを入力してください", class: "col" %><br />
+        <%= f.submit "送信" %>
+      <% end %>
     </div>
   </div>
 </div>
