--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,22 +33,46 @@
           <% if @book.favorited_by?(current_user) %>
             <td>
               <%= link_to book_favorite_path(@book), method: :delete do %>
-                ❤︎<%= @book.favorites.count %>
+              <div class="text-danger">
+                <i class="fa-solid fa-heart"></i>︎︎<%= @book.favorites.count  %>
+              </div>
               <% end %>
             </td>
           <% else %>
             <td>
               <%=link_to book_favorite_path(@book), method: :post do %>
-                ❤<%= @book.favorites.count %>
+              <div class="text-primary">
+                <i class="fa-solid fa-heart"></i><%= @book.favorites.count %>
+              </div>
               <% end %>
             </td>
           <% end %>
           <td>
-            コメント数:<%= @book.book_comments.count %>
+            コメント数: <%= @book.book_comments.count %>
           </td>
         </tr>
       </table>
-      <%= form_with model: @book_comment, url: book_book_comment_path(@book) do |f| %>
+
+      <% @book_comments.each do |book_comment| %>
+        <table>
+          <tr>
+            <td>
+              <%= image_tag book_comment.user.get_profile_image, size: "50x50" %><br />
+              <%= link_to book_comment.user.name, user_path(book_comment.user.id) %>
+            </td>
+            <td>
+              <%= book_comment.comment %>
+            </td>
+            <% if book_comment.user_id == current_user.id %>
+              <td>
+                <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
+              </td>
+            <% end %>
+          </tr>
+        </table>
+      <% end %>
+
+      <%= form_with model: @book_comment, url: book_book_comments_path(@book) do |f| %>
         <%= f.text_area :comment, rows: '6', placeholder: "コメントを入力してください", class: "col" %><br />
         <%= f.submit "送信" %>
       <% end %>
