--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,8 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロワー数: **</td>
+        <td><%= link_to 'フォローする/フォローを解除する' %></td>
         <td><%= link_to 'Show', user_path(user.id) %></td>
       </tr>
     <% end %>
