--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,8 +11,9 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
-        <td>フォロワー数: **</td>
-        <td><%= link_to 'フォローする/フォローを解除する' %></td>
+        <td>フォロー数: <%= user.followings.count %></td>
+        <td>フォロワー数: <%= user.followers.count %></td>
+        <td><%= render "relationships/btn", user: user, options: { class: "follow-link" } %></td>
         <td><%= link_to 'Show', user_path(user.id) %></td>
       </tr>
     <% end %>
