--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -2,24 +2,28 @@
   <tr><%= image_tag user.get_profile_image, size: "100x100" %></tr>
   <tr>
 	  <th>name</th>
-	  <th><%= user.name %></th>
+	  <td><%= user.name %></td>
   </tr>
   <tr>
 	  <th>introduction</th>
-	  <th><%= user.introduction %></th>
+	  <td><%= user.introduction %></td>
   </tr>
   <tr>
     <th>follows</th>
-    <th><%= link_to '***' %></th>
+    <td><%= link_to user.followings.count, user_followings_path(user) %></td>
   </tr>
   <tr>
     <th>followers</th>
-    <th><%= link_to '***' %></th>
+    <td><%= link_to user.followers.count, user_followers_path(user) %></td>
   </tr>
 </table>
 
 <div class='row'>
-  <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if user.id == current_user.id %>
+    <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% else %>
+    <%= render "relationships/btn", user: user, options: { class: "" } %>
   <% end %>
 </div>
