[Finish] Asynchronous like and comment functions

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,7 +20,7 @@
           <%= render "favorites/btn", book: book %>
         </td>
         <td>
-          コメント数: <%= book.book_comments.count %>
+          <%= render 'book_comments/counter', book: book %>
         </td>
       </tr>
     <% end %>
