--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: book_comment, url: book_book_comments_path(book), local: false do |f| %>
-  <%= f.text_area :comment, rows: '6', placeholder: "コメントを入力してください", class: "col" %><br />
+<%= form_with model: [book, book_comment], url: book_book_comments_path(book), local: false do |f| %>
+  <%= f.text_area :comment, rows: '6', placeholder: "コメントを入力してください", class: "col", id: "comment_textarea" %><br />
   <%= f.submit "送信" %>
 <% end %>
