--- a/app/views/book_comments/_index.html.erb
+++ b/app/views/book_comments/_index.html.erb
@@ -1,18 +1,21 @@
-<% book_comments.each do |book_comment| %>
-  <table>
-    <tr>
-      <td>
-        <%= image_tag book_comment.user.get_profile_image, size: "50x50" %><br />
-        <%= link_to book_comment.user.name, user_path(book_comment.user.id) %>
-      </td>
-      <td>
-        <%= book_comment.comment %>
-      </td>
-      <% if book_comment.user_id == current_user.id %>
-        <td>
-          <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
-        </td>
-      <% end %>
-    </tr>
-  </table>
-<% end %>
+<table>
+  <tbody>
+    <% book_comments.each do |book_comment| %>
+     <tr>
+       <td>
+         <%= image_tag book_comment.user.get_profile_image, size: "50x50" %><br />
+         <%= link_to book_comment.user.name, user_path(book_comment.user.id) %>
+       </td>
+       <td>
+         <%= book_comment.comment %>
+       </td>
+       <% if book_comment.user_id == current_user.id %>
+         <td>
+            <%= link_to 'Destroy', book_book_comment_path(book_comment.book, book_comment), method: :delete, remote: true, class: "btn btn-sm btn-danger" %>
+         </td>
+       <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
