--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,10 @@
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
+      <!-- 過去の投稿を表示 -->
       <%= render 'books/index',books: @books %>
+      <!-- 投稿比を表示 -->
+      <%= render 'books/comparison', today_book: @today_book, yesterday_book: @yesterday_book, this_week_book: @this_week_book, last_week_book: @last_week_book %>
     </div>
   </div>
 </div>
