--- a/app/views/books/_comparison.html.erb
+++ b/app/views/books/_comparison.html.erb
@@ -29,7 +29,7 @@
     <td><%= this_week_book.count %></td>
     <td><%= last_week_book.count %></td>
     <% if last_week_book.count == 0 %>
-      <td>全集の投稿はなし</td>
+      <td>前週の投稿はなし</td>
     <% else %>
       <% @the_week_before = this_week_book.count / last_week_book.count %>
       <td>
