--- a/app/views/books/_comparison.html.erb
+++ b/app/views/books/_comparison.html.erb
@@ -1,4 +1,4 @@
-<h2>投稿数の前日比・先週比</h2>
+<h2 class="mt-4">投稿数の前日比・先週比</h2>
 <table class="table table-bordered col-lg-11 col-md-12">
   <tr>
     <th>今日の投稿数</th>
