--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,11 @@
       <!-- 過去の投稿を表示 -->
       <%= render 'books/index',books: @books %>
       <!-- 過去7日分の投稿数をグラフ表示 -->
-      <%= render 'books/count' %>
+      <%= render 'books/count', books: @books %>
       <!-- 投稿比を表示 -->
       <%= render 'books/comparison', today_book: @today_book, yesterday_book: @yesterday_book, this_week_book: @this_week_book, last_week_book: @last_week_book %>
+      <!-- 検索日の投稿数を表示 -->
+      <%= render 'search_post_count', user: @user, search_book: @search_book %>
     </div>
   </div>
 </div>
