--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -5,6 +5,7 @@
       <th>Title</th>
       <th>Opinion</th>
       <th colspan="3"></th>
+      <th>Evaluation</th>
     </tr>
   </thead>
   <tbody>
@@ -17,12 +18,13 @@
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
         <td id="favorite_btn_<%= book.id %>">
-          <%= render "favorites/btn", book: book %>
+          <%= render 'favorites/btn', book: book %>
         </td>
         <td>
           <%= render 'book_comments/counter', book: book %>
         </td>
         <td>閲覧数：<%= book.view_counts.count %></td>
+        <td><%= render 'books/static_rate', book: book %></td>
       </tr>
     <% end %>
   </tbody>
