--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,8 @@
           <td id="comment_counter">
             <%= render 'book_comments/counter', book: @book %>
           </td>
-          <td>閲覧数：<%=  @book.view_counts.count %></td>
+          <td>閲覧数：<%= @book.view_counts.count %></td>
+          <td><%= render 'static_rate', book: @book %></td>
           <% unless @book.user_id != current_user.id %>
             <td>
               <%= link_to 'Edit', edit_book_path(@book.id), class: "btn btn-sm btn-success" %>
