[Finish] various orders

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -1,3 +1,8 @@
+<%= link_to '人気順 ( Default )', books_path %>
+ | <%= link_to '新しい順', books_path(latest: "true") %>
+ | <%= link_to '古い順', books_path(old: "true") %>
+ | <%= link_to '評価の高い順', books_path(star_count: "true") %>
+
 <table class='table table-hover table-inverse'>
   <thead>
     <tr>
